Added first project description

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <h1 class="caption1">My Projects</h1>
                 <div class="services-list">
                     <div >
-                        <h2>Project 1</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis molestias sed impedit ad quia inventore. Culpa praesentium ullam quasi. Tempora nesciunt doloremque blanditiis similique in laboriosam, beatae excepturi vel, deserunt iure voluptatem error repellat sequi, fugit modi veritatis sunt nemo illo suscipit minus animi ratione eum? Nostrum, magnam nulla.</p>
+                        <h2>Nowait jutFood </h2>
+                        <p>This project is clone of food delivery web-app swiggy.com, In which I have used actuall swiggy's API to show restaurent data.Belowe is the link to visit on this project in detail.</p>
                         <a href="#">View</a>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
