--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>  
             <div class="intro-text">
-                <p>REACT JS, INSTRUCTOR, DEVELOPER</p>
+                <p>REACT JS, C++, C INSTRUCTOR, DEVELOPER</p>
                 <h1>Hello, I am <span>Akriti</span><br> from Kanpur</h1>
             </div>   
         </div>
@@ -37,11 +37,11 @@
         <div class="about-container">
             <div class="about-row">
                     <div class="about-col-1">
-                            <img src="profile_img.webp">
+                            <img src="ak_intro.jpg">
                     </div>
                     <div class="about-col-2">
                         <h1 class="caption">About Me!</h1>
-                        <p>Hello there! I'm Akriti Yadav, a dedicated ReactJS and JavaScript developer and instructor, with a passion for crafting seamless user interfaces and scalable web applications. With 1.2 years of hands-on experience in front-end development, I specialize in leveraging the power of ReactJS to create responsive, high-performance applications.</p>
+                        <p>Hello there! I'm Akriti Yadav, a dedicated ReactJS, JavaScript, C, C++ developer and instructor, with a passion for crafting seamless user interfaces and scalable web applications. Having 1.3 years of hands-on experience in front-end development, I specialize in leveraging the power of ReactJS to create responsive, high-performance applications.Deep understanding of both languages C and C++, including advanced concepts such as memory management, pointers, and object-oriented programming.</p>
                         <div class="about-tab-div">
                             <div class="about-links active-link" onclick="openTabContent('skills')">Skills</div>
                             <div class="about-links" onclick="openTabContent('education')">Education</div>
@@ -121,9 +121,9 @@
                 <div class="services-list">
                     <div >
                         <h2>Nowait jutFood </h2>
-                        <p>This project is clone of food delivery web-app swiggy.com, In which I have used actuall swiggy's API to show restaurent data.Belowe is the link to visit on this project in detail.</p>
-                        <a href="#">View</a>
-                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                        <p>This project is clone of food delivery web-app swiggy.com. In which I have used actuall swiggy's API to show restaurent data. Below is the link to visit on this project in detail.</p>
+                        <a href="https://github.com/akritiyadav001/Nowait_justFood" target="_blank">View   <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                      
                     </div>
                     <div >
                         <h2>Project 2</h2>
