updated little in intro img

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                                 </li>
                                 <li>
                                     <span>
-                                        C 
+                                        C & C++
                                     </span><br>
-                                     Solved Many problems on HackerRank
+                                     Solved Many problems on HackerRank and CODECHEF
                                 </li>
                             </ul>
                         </div>
@@ -93,7 +93,7 @@
                                     Anyatam Adhyayan Education Services Private LTD, Pune<br>
                                     Since May 2023
                                 </li>
-                                <li><span>C Developer, Instructor</span><br>
+                                <li><span>C & C++ Developer, Instructor</span><br>
                                     Anyatam Adhyayan Education Services Private LTD Pune<br>
                                     Since May 2023   
                                 </li>
@@ -179,7 +179,7 @@
              </div>
         </div>
         <div id="copyright">
-            <p>@copyright made by Akriti Yadav with <i class="fa-solid fa-heart"></i></p>
+            <p>copyright made by Akriti Yadav with <i class="fa-solid fa-heart"></i></p>
         </div>
     </div>
     </body>
