--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="intro-text">
                 <p>REACT JS, C++, C INSTRUCTOR, DEVELOPER</p>
                 <h1>Hello, I am <span>Akriti</span><br> from Kanpur</h1>
+                <p>Expert in ReactJS, JavaScript and C++</p>
             </div>   
         </div>
     </div>
@@ -90,11 +91,11 @@
                         <div class="about-tab-content" id="experience">
                             <ul>
                                 <li><span>Frontend Developer, Instructor</span><br>
-                                    Anyatam Adhyayan Education Services Private LTD, Pune<br>
+                                    Anyatam Adhyayan Education Services Private L.T.D. Pune<br>
                                     Since May 2023
                                 </li>
                                 <li><span>C & C++ Developer, Instructor</span><br>
-                                    Anyatam Adhyayan Education Services Private LTD Pune<br>
+                                    Anyatam Adhyayan Education Services Private L.T.D. Pune<br>
                                     Since May 2023   
                                 </li>
                             </ul>
@@ -126,15 +127,15 @@
                       
                     </div>
                     <div >
-                        <h2>Project 2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis molestias sed impedit ad quia inventore. Culpa praesentium ullam quasi. Tempora nesciunt doloremque blanditiis similique in laboriosam, beatae excepturi vel, deserunt iure voluptatem error repellat sequi, fugit modi veritatis sunt nemo illo suscipit minus animi ratione eum? Nostrum, magnam nulla.</p>
+                        <h2>Car Loan Project</h2>
+                        <p></p>
                         <a href="#">View</a>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                         
                     </div>
                     <div >
-                        <h2>Project 3</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni perspiciatis molestias sed impedit ad quia inventore. Culpa praesentium ullam quasi. Tempora nesciunt doloremque blanditiis similique in laboriosam, beatae excepturi vel, deserunt iure voluptatem error repellat sequi, fugit modi veritatis sunt nemo illo suscipit minus animi ratione eum? Nostrum, magnam nulla.</p>
+                        <h2>Temperature Measuring</h2>
+                        <p></p>
                         <a href="#">View</a>
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     </div>
@@ -164,7 +165,7 @@
                         </a>
                     </div>
                     <div class="download-resume">
-                           <button><a href="final_bg.jpg">Download Resume</a></button>
+                           <button><a href="https://drive.google.com/file/d/1-7LzUVCDPQuD1fCgE4WrTuPijC-WaFbh/view?usp=drive_link">Download Resume</a></button>
                     </div>
                 </div>
                 <div class="contact-right">
@@ -179,7 +180,7 @@
              </div>
         </div>
         <div id="copyright">
-            <p>copyright made by Akriti Yadav with <i class="fa-solid fa-heart"></i></p>
+            <p>Akriti's Portfolio</p>
         </div>
     </div>
     </body>
