Updated alignments and background colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="nav-container">
             <nav>
-                <img src="AK_logo.png" width="200px" height="120px">
+                <img src="Ak_logo.jpg" width="200px" height="120px">
                 <ul>
                     <li>
                         <a href="#header">Home</a>
@@ -28,9 +28,9 @@
                 </ul>
             </nav>  
             <div class="intro-text">
-                <p>REACT JS, C++, C INSTRUCTOR, DEVELOPER</p>
+                <p>REACT, JS, C++ INSTRUCTOR, DEVELOPER</p>
                 <h1>Hello, I am <span>Akriti</span><br> from Kanpur</h1>
-                <p>Expert in ReactJS, JavaScript and C++</p>
+                <p>Expert in ReactJS, JavaScript, C++, C</p>
             </div>   
         </div>
     </div>
@@ -39,6 +39,7 @@
             <div class="about-row">
                     <div class="about-col-1">
                             <img src="ak_intro.jpg">
+                            
                     </div>
                     <div class="about-col-2">
                         <h1 class="caption">About Me!</h1>
@@ -121,7 +122,7 @@
                 <h1 class="caption1">My Projects</h1>
                 <div class="services-list">
                     <div >
-                        <h2>Nowait jutFood </h2>
+                        <h2>Nowait justFood </h2>
                         <p>This project is clone of food delivery web-app swiggy.com. In which I have used actuall swiggy's API to show restaurent data. Below is the link to visit on this project in detail.</p>
                         <a href="https://github.com/akritiyadav001/Nowait_justFood" target="_blank">View   <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                       
@@ -152,7 +153,7 @@
                 <div class="contact-left">
                     <h1 class="caption1">Contact Me!</h1>
                     <p><img src="send.png" height="15px" width="20px">gdakriti.yadav001@gmail.com</p>
-                    <p><img src="phone.png" height="15px" width="20px">9421739451</p>
+                    <p><img src="phone.png" height="15px" width="20px">9621729451</p>
                     <div class="social-media-icons">
                         <a href="https://www.linkedin.com/in/akriti007" target="_blank">
                             <img src="linkedIb_icon.png" >
@@ -165,15 +166,15 @@
                         </a>
                     </div>
                     <div class="download-resume">
-                           <button><a href="https://drive.google.com/file/d/1-7LzUVCDPQuD1fCgE4WrTuPijC-WaFbh/view?usp=drive_link">Download Resume</a></button>
+                           <button><a href="https://drive.google.com/file/d/1-7LzUVCDPQuD1fCgE4WrTuPijC-WaFbh/view?usp=drive_link" target="_blank">Download Resume</a></button>
                     </div>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your name" required autocomplete="off">
+                        <input type="text" name="Name" placeholder="Your name" required autocomplete="off" autofocus>
                         <input type="email" name="Email" placeholder="Your email" required autocomplete="off">
                         <textarea name="Message" rows="6" cols="6" placeholder="Your message"></textarea autocomplete="off">
-                        <button type="submit" style="width: 30%; font-size: 18px;height: 50px; border-radius: 6px; border:0; outline: none; cursor: pointer;">Submit</button>
+                        <button type="submit">Submit</button>
                     </form>
                     <span id="confirm-submit"></span>
                 </div>
