--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
              </div>
         </div>
         <div id="copyright">
-            <p>Akriti's Portfolio</p>
+            <p>AKRITI'S PORTFOLIO</p>
         </div>
     </div>
     </body>
